Functional program with Github OAuth, repo file contents, file content!
