# openapi.yaml
@@ -30,17 +30,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RepositoryInfo'
-  /repository_file_contents/{repo_name}/{file_path}:
+  /repository_file_contents/{username}/{repo_name}/{file_path}:
     get:
       operationId: getRepositoryFileContents
       summary: Get the contents of a file in the repository
       parameters:
       - in: path
+        name: username
+        schema:
+            type: string
+        required: true
+        description: The username of the repository owner.
+      - in: path
         name: repo_name
         schema:
             type: string
         required: true
-        description: The name of the Github repository (format-- user/repo).
+        description: The name of the Github repository
       - in: path
         name: file_path
         schema:
@@ -54,6 +60,60 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FileContents'
+  /list_repository_directory/{username}/{repo_name}:
+    get:
+      operationId: listRepositoryDirectoryWithoutFilePath
+      summary: List the contents of the repository (root directory)
+      parameters:
+      - in: path
+        name: username
+        schema:
+            type: string
+        required: true
+        description: The username of the repository owner.
+      - in: path
+        name: repo_name
+        schema:
+            type: string
+        required: true
+        description: The name of the Github repository.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DirectoryContents'
+  /list_repository_directory/{username}/{repo_name}/{file_path}:
+    get:
+      operationId: listRepositoryDirectoryWithFilePath
+      summary: List the contents of the repository (specified directory)
+      parameters:
+      - in: path
+        name: username
+        schema:
+            type: string
+        required: true
+        description: The username of the repository owner.
+      - in: path
+        name: repo_name
+        schema:
+            type: string
+        required: true
+        description: The name of the Github repository.
+      - in: path
+        name: file_path
+        schema:
+            type: string
+        required: true
+        description: The path of the file within the repository.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DirectoryContents'
   /generate_auth_url:
     get:
       operationId: generateAuthURL
@@ -95,7 +155,24 @@ components:
       properties:
         content:
           type: string
-          description: The contents of the file in the repository.
+          description: The contents of the file in the repository. If you specify a file path (optional parameter), it will return the file contents
+    DirectoryContents:
+      type: array
+      items:
+        type: object
+        properties:
+          name:
+            type: string
+            description: The name of the file or directory
+          path:
+            type: string
+            description: The path of the file or directory within the repository
+          type:
+            type: string
+            description: The type of the item (file or dir)
+          size:
+            type: integer
+            description: The size of the file in bytes (only applicable for files).
     AuthUrl:
       type: object
       properties:
